--- a/base_feature/build.gradle
+++ b/base_feature/build.gradle
@@ -1,18 +1,19 @@
 apply plugin: 'com.android.feature'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
+        baseFeature true
     compileSdkVersion 28
 
 
 
     defaultConfig {
 
-        baseFeature true
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
