--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = '1.3.31'
 
     repositories {
         google()
@@ -9,7 +9,7 @@ buildscript {
         maven { url 'https://maven.google.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -23,11 +23,11 @@ allprojects {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
-        maven { url 'https://plugins.gradle.org/m2/'}
-        maven {
-            url "https://maven.google.com"
+        maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url "https://maven.google.com"
         }
-    }}
+    }
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
