--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':myapplication', ':network', ':mvvm2', ':instantapp', ':base_feature', ':rxjava'
+include ':app', ':myapplication', ':network', ':mvvm2', ':instantapp', ':base_feature', ':rxjava', ':mvvmlivedata'
